# Lumen

./: .gitignore  README.md
client/: lumen.sln
client/Lumen.Desktop/: App.axaml  App.axaml.cs  Lumen.Desktop.csproj  Program.cs  Resources.Designer.cs  Resources.resx  SettingsManager.cs  ViewLocator.cs  app.manifest
client/Lumen.Desktop/Models/: ApplicationSettings.cs  ConnectionSettings.cs  EffectSettings.cs  EffectSettingsCache.cs  LumenSettings.cs  StripLayoutSettings.cs  StripSettings.cs
client/Lumen.Desktop/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
client/Lumen.Desktop/ViewModels/TabPages/: ApplicationViewModel.cs  StripViewModel.cs
client/Lumen.Desktop/ViewModels/TabPages/EffectSettings/: EffectAmbientViewModel.cs  EffectCalibrateLayoutViewModel.cs  EffectOffViewModel.cs  EffectSettingViewModel.cs  EffectSolidViewModel.cs
client/Lumen.Desktop/Views/: MainWindow.axaml  MainWindow.axaml.cs
client/Lumen.Desktop/Views/TabPages/: ApplicationView.axaml  ApplicationView.axaml.cs  StripView.axaml  StripView.axaml.cs
client/Lumen.Desktop/Views/TabPages/EffectSettings/: EffectAmbientView.axaml  EffectAmbientView.axaml.cs  EffectCalibrateLayoutView.axaml  EffectCalibrateLayoutView.axaml.cs  EffectOffView.axaml  EffectOffView.axaml.cs  EffectSolidView.axaml  EffectSolidView.axaml.cs
client/Lumen.Service/: Logging.cs  Lumen.Service.csproj  StripFrame.cs  StripLayout.cs  StripRunner.cs
client/Lumen.Service/Connection/: IConnection.cs  UdpConnection.cs
client/Lumen.Service/ControllerMessages/: ControllerMessage.cs  IByteSerializable.cs  MessageKind.cs  Rgb8.cs
client/Lumen.Service/Effect/: AmbientColorEffect.cs  IEffect.cs  LayoutCalibrationEffect.cs  SolidColorEffect.cs
client/Lumen.Service/Utilities/: AutoStartService.cs  BinarySerializer.cs  Range.cs
client/Lumen.UsbLib/: Lumen.UsbLib.csproj  UsbController.cs
controller/: Cargo.toml  rust-toolchain.toml
controller/.cargo/: config.toml
controller/src/: atomic_channel.rs  main.rs  message_controller.rs  ws2812.rs
controller/src/messages/: bytestreamreader.rs  message_id.rs  message_kind.rs  mod.rs  rgb8.rs
