[package]
edition = "2021"
name = "controller"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[profile.dev]
debug = 2

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
debug = 2

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
pio = "0.2.1"
pio-proc = "0.2"

fixed = "1.23.1"
fixed-macro = "1.2"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

arrayvec = { version = "0.7.4", default-features = false, features = ["serde"] }
heapless = "0.8"
static_cell = "2"
static_assertions = "1.1.0"
byteorder = { version = "1", default-features = false }
rand = { version = "0.8.5", default-features = false }
paste = "1.0.15"


embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-embedded-hal = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", features = [
    "task-arena-size-98304",
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-net = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "udp",
    "dhcpv4",
    "dns",
] }
cyw43 = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "firmware-logs",
] }
cyw43-pio = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "overclock",
] }
